@@ -46,7 +46,7 @@ setup(
         "rcsb.db >= 0.80",
         "rcsb.utils.chemref >= 0.25",
         "rcsb.utils.config >= 0.24",
-        "rcsb.utils.seq >= 0.23",
+        "rcsb.utils.seq >= 0.25",
         "rcsb.utils.ec >= 0.16",
         "rcsb.utils.struct >= 0.20",
         "rcsb.utils.taxonomy >= 0.25",
